[gd_scene load_steps=11 format=2]

[ext_resource path="res://targets/TreeTarget.gd" type="Script" id=1]
[ext_resource path="res://assets/SunnysideWorld_Tileset_V0.1.png" type="Texture" id=2]
[ext_resource path="res://assets/leaves_hit.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 384, 32, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 416, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 416, 32, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 16, 208, 16, 16 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FallingLeaves:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FallingLeaves:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "TreeLeaves"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FallingLeaves:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FallingLeaves:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="TreeTarget" type="StaticBody2D"]
collision_layer = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteFull" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = SubResource( 3 )

[node name="SpriteHalf" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = SubResource( 2 )

[node name="SpriteAlmost" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = SubResource( 7 )

[node name="SpriteChopped" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -3 )
texture = SubResource( 6 )

[node name="FallingLeaves" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -11 )
texture = ExtResource( 3 )
hframes = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.7
anims/RESET = SubResource( 9 )
anims/TreeLeaves = SubResource( 8 )
